
[package]
name = "solana-bpf-icc-token"
version = "0.0.1"
description = "ICC TOKEN template program written in Rust"
authors = [""]
repository = "https://github.com/alextmn/icc_token"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = "~1.8.14"

[dev-dependencies]
solana-program-test = "~1.8.14"
solana-sdk = "~1.8.14"

[lib]
name = "icc_token"
crate-type = ["cdylib", "lib"]
